added viewport tags

--- a/html/login.html
+++ b/html/login.html
@@ -5,9 +5,13 @@
     <title> Login </title>
     <!-- Fonts imports -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+
     <!-- Stylesheets imports -->
     <link href="../css/base.css" rel="stylesheet">
     <link href="../css/registration.css" rel="stylesheet">
+
+    <!-- Viewport Configuration -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
