--- a/html/register.html
+++ b/html/register.html
@@ -12,6 +12,9 @@
 
     <!-- Javascript imports -->
     <script type="application/javascript" src="../js/registration.js"></script>
+
+    <!-- Viewport Configuration -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
