general design improvements

--- a/html/login.html
+++ b/html/login.html
@@ -15,22 +15,24 @@
 </head>
 
 <body>
-<div class="form centered">
-    <h1> Login to ActivityPlanner </h1>
-    <form class="login-form" action="" method="post">
-        <label>
-            <input type="text" placeholder="Username" id="username"/>
-        </label>
-        <label>
-            <input type="password" placeholder="Password" id="password"/>
-        </label>
-        <button class="bold"> login</button>
-        <b>
-        <p>Not registered yet?
-           <a href="register.html">Create an account</a>
-        </p>
-        </b>
-    </form>
+<div class="column">
+    <div class="form centered">
+        <h1> Login to ActivityPlanner </h1>
+        <form class="login-form" action="" method="post">
+            <label>
+                <input type="text" placeholder="Username" id="username"/>
+            </label>
+            <label>
+                <input type="password" placeholder="Password" id="password"/>
+            </label>
+            <button class="bold"> login</button>
+            <b>
+                <p>Not registered yet?
+                    <a href="register.html">Create an account</a>
+                </p>
+            </b>
+        </form>
+    </div>
 </div>
 </body>
 </html>
