--- a/html/register.html
+++ b/html/register.html
@@ -18,37 +18,39 @@
 </head>
 
 <body>
-<div class="form centered">
-    <h1> Create account </h1>
-    <div class="error-message hidden" id="validMailError">
-        Please enter a valid email address
+    <div class="column">
+        <div class="form centered">
+            <h1> Create account </h1>
+            <div class="error-message hidden" id="validMailError">
+                Please enter a valid email address
+            </div>
+            <div class="error-message hidden" id="passwordsMatchError">
+                Passwords don't match
+            </div>
+            <div class="error-message hidden" id = "populatedFieldsError">
+                Not all fields are populated
+            </div>
+            <form class="login-form" action="" method="post" onSubmit = "return validateForm(this)">
+                <label>
+                    <input type="text" placeholder="Username" id="username"/>
+                </label>
+                <label>
+                    <input type="text" placeholder="Email address" id="email"/>
+                </label>
+                <label>
+                    <input type="password" placeholder="Password" id="password"/>
+                </label>
+                <label>
+                    <input type="password" placeholder="Confirm Password" id="confirmPassword"/>
+                </label>
+                <button class="bold" type="submit"> Register</button>
+                <p>
+                    <b>Already have an account?
+                        <a href="login.html">Login here</a>
+                    </b>
+                </p>
+            </form>
+        </div>
     </div>
-    <div class="error-message hidden" id="passwordsMatchError">
-        Passwords don't match
-    </div>
-    <div class="error-message hidden" id = "populatedFieldsError">
-        Not all fields are populated
-    </div>
-    <form class="login-form" action="" method="post" onSubmit = "return validateForm(this)">
-        <label>
-            <input type="text" placeholder="Username" id="username"/>
-        </label>
-        <label>
-            <input type="text" placeholder="Email address" id="email"/>
-        </label>
-        <label>
-            <input type="password" placeholder="Password" id="password"/>
-        </label>
-        <label>
-            <input type="password" placeholder="Confirm Password" id="confirmPassword"/>
-        </label>
-        <button class="bold" type="submit"> Register</button>
-        <p>
-            <b>Already have an account?
-                <a href="login.html">Login here</a>
-            </b>
-        </p>
-    </form>
-</div>
 </body>
 </html>
