add first name and last name to registration form #1

--- a/html/register.html
+++ b/html/register.html
@@ -31,6 +31,16 @@
                 Not all fields are populated
             </div>
             <form class="login-form" action="" method="post" onSubmit = "return validateForm(this)">
+                <table>
+                    <tr>
+                        <td>
+                            <input type="text" placeholder="First name" id="firstname"/>
+                        </td>
+                        <td>
+                            <input type="text" placeholder="Last name" id="lastname" style="margin-left: 3px;"/>
+                        </td>
+                    </tr>
+                </table>
                 <label>
                     <input type="text" placeholder="Username" id="username"/>
                 </label>
