--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
     <header class="container">
         <nav>
             <ul>
-                <a href="register.html"><li class="square-button">Sign Up</li></a>
+                <a href="register.php"><li class="square-button">Sign Up</li></a>
                 <a href="login.html"><li class="square-button">Login</li></a>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">About</a></li>
@@ -26,7 +26,7 @@
         <div id="quote-wrapper">
         <div class="nonselectable" id="header-quote">
             <p>Make yourself proud <span>plan your</span> ultimate<span> workout</span></p>
-            <a class="rounded-button" id="get-started" href="register.html">Get started now</a>
+            <a class="rounded-button" id="get-started" href="register.php">Get started now</a>
         </div>
 
         </div>
@@ -78,7 +78,7 @@
                 <h2>Don't wait! Make going to the gym a better experience - all for FREE!</h2>
             </div>
         </div>
-        <center><a class="rounded-button" href="register.html">Join Now</a></center>
+        <center><a class="rounded-button" href="register.php">Join Now</a></center>
     </div>
     <footer>
         <div id="trademark">©2020 Martin Georgiev & Karina Kozarova. All Rights Reserved.</div>
