--- a/html/login.html
+++ b/html/login.html
@@ -28,7 +28,7 @@
             <button class="bold"> login</button>
             <b>
                 <p>Not registered yet?
-                    <a href="register.html">Create an account</a>
+                    <a href="register.php">Create an account</a>
                 </p>
             </b>
         </form>
